# OpenGL-IsoGame

./: .gitignore  CMakeLists.txt  GameObject.cpp  GameObject.h  Includes.h  LICENSE  README.md  Tile.cpp  Tile.h  TileMap.cpp  TileMap.h  Triangle.cpp  Triangle.h  main.cpp  stb_image.h
Resources/: IsoTileMap.csv  IsoTileMap.tmx  IsoTileMap2.csv  IsoTileMap2.tmx  IsoTileMap2wp.csv  IsoTileMap2wp.json  IsoTileSet.tsx  TIleMap.csv  TIleMap.tmx  TileSetTiled.tsx  TileSetTiled2.tsx
